--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ a{
 }
 
 img{
-    width: 100%;
+    max-width: 100%;
 }
 
 .contenedor{
@@ -59,4 +59,45 @@ h2{
 
 h3{
     font-size: 2.4rem;
+}
+
+/*--Logo--*/
+
+.header{
+    display: flex;
+    justify-content: center;
+}
+.header__logo{
+    margin: 3rem 0;
+}
+/*--Footer--*/
+.footer{
+    background-color: var(--primarioOscuro);
+    padding: .5rem 0;
+    margin-top: 2rem;
+}
+
+.footer__texto{
+    text-align: center;
+    font-family: var(--fuente);
+    font-size: 2rem;
+}
+/*--Navegacion--*/
+.navegacion{
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+}
+
+.navegacion__enlace{
+    font-family: var(--fuente);
+    color: var(--blanco);
+    font-size: 3rem;
+}
+
+.navegacion__enlace--activo,
+.navegacion__enlace:hover{
+    color: var(--secundario);
 }
