--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,66 @@ h3{
 .navegacion__enlace:hover{
     color: var(--secundario);
 }
+
+/*--Grid--*/
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+@media(min-width: 768px){
+    .grid{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/*--Productos--*/
+.producto{
+    background-color: var(--primarioOscuro);
+    padding: 1rem;
+}
+
+.producto__imagen{
+    width: 100%;
+}
+
+.producto__nombre{
+    font-size: 3rem;
+}
+
+.producto__precio{
+    font-size: 2rem;
+    color: var(--secundario);
+}
+
+.producto__nombre,
+.producto__precio{
+    font-family: var(--fuente);
+    margin: 1rem 0;
+    text-align: center;
+    line-height: 1.2;
+}
+
+/*--Graficos--*/
+.grafico{
+    min-height: 30rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.grafico--camisas{
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    background-image: url(../img/grafico1.jpg);
+}
+.grafico--node{
+    grid-row: 8 / 9;
+    grid-column: 1 / 3;
+    background-image: url(../img/grafico2.jpg);
+}
+
+@media (min-width:768px) {
+    .grafico--node{
+        grid-row: 5 / 6;
+        grid-column: 2 / 4;
+    } 
+}
