--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,55 @@ h3{
 
 /*--Nosotros--*/
 
+.nosotros{
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+}
+
+@media (min-width:768px) {
+    .nosotros{
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 1rem;
+    }
+}
+
+@media (min-width:768px) {
+    .nosotros__imagen{
+        grid-column: 2 / 3;
+    }
+}
+
+.nosotros__imagen{
+    grid-row: 1 / 2;
+    width: 100%;
+}
+
+.nosotros__texto{
+    color: var(--blanco);
+    font-family: var(--fuente);
+}
+
+/*--Iconos Nosotros--*/
+.bloques{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+@media (min-width:768px) {
+    .bloques{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+.bloque{
+    text-align: center;
+}
+
+.bloque__titulo{
+    margin: 0;
+}
+
+.bloque__imagen{
+    width: 100%;
+}
