--- a/css/style.css
+++ b/css/style.css
@@ -231,11 +231,21 @@ h3{
 }
 
 .formulario{
-
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
 }
 
 .formulario__campo{
-
+    border-width: 1rem;
+    border-style: solid;
+    border-color: var(--primarioOscuro);
+    background-color: transparent;
+    font-size: 2rem;
+    color: var(--blanco);
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
 }
 
 .formulario__submit{
@@ -244,13 +254,13 @@ h3{
     font-family: var(--fuente);
     font-size: 2rem;
     padding: 2rem;
-    transition: font-size .3s ease;
+    transition: font-size .5s ease;
+    grid-column: 1 / 3;
 }
 
 .formulario__submit:hover{
     cursor: pointer;
     background-color: var(--secundarioOscuro);
-    font-size: 2.4rem;
 }
 
 .camisa__imagen{
